--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.11",
-    "@angular/cli": "~9.1.9",
-    "@angular/compiler-cli": "~9.1.11",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.11",
     "@angular/compiler": "~9.1.11",
@@ -29,16 +27,19 @@
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "@angular/cli": "^11.0.2",
+    "@angular/compiler-cli": "^9.1.12"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.9",
-    "@angular/cli": "~9.1.9",
-    "@angular/compiler-cli": "~9.1.11",
-    "@types/node": "^12.11.1",
+    "@angular/cli": "^11.0.2",
+    "@angular/compiler-cli": "^9.1.12",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
@@ -51,7 +52,6 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   },
-
   "engines": {
     "node": "12.18.0",
     "npm": "6.14.4"
